--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.57"
-httpclient = "0.1.12"
+httpclient = "0.1.13"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 
@@ -16,7 +16,7 @@ openapi-client-generator = "0.1.1"
 
 [dev-dependencies]
 tokio = { version = "1.18.2", features = ["full"] }
-openapi-client-generator = "0.1.1"
 
 [patch.crates-io]
 openapi-client-generator = {path = "../openapi-client-generator"}
+httpclient = {path = "../httpclient"}
