--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "plaid-openapi"
 version = "0.1.2"
 edition = "2021"
-
+description = "Feature-complete, human, and async Plaid client, generated from Plaid's OpenAPI specification"
+license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
