--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,19 @@
 [package]
 name = "plaid-openapi"
-version = "0.1.5"
+version = "1.0.0"
 edition = "2021"
-description = "Feature-complete, human, and async Plaid client, generated from Plaid's OpenAPI specification"
+description = "Official Plaid client, generated from the OpenAPI spec."
+readme = "README.md"
 license = "MIT"
 documentation = "https://docs.rs/plaid-openapi"
-homepage = "https://github.com/libninjacom/plaid-rust"
-repository = "https://github.com/libninjacom/plaid-rust"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/libninjacom/plaid-rs"
+repository = "https://github.com/libninjacom/plaid-rs"
 
 [dependencies]
 anyhow = "1.0.57"
-httpclient = "0.1.13"
+httpclient = "0.2.0"
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 
 [dev-dependencies]
 tokio = { version = "1.18.2", features = ["full"] }
-openapi-client-generator = "=0.1.9"
