--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 
 [dependencies]
 openapi-client-generator = { git = "https://github.com/libninjacom/openapi-client-generator" }
+
+# Use this for local development. Example:
+# [patch."https://github.com/libninjacom/openapi-client-generator"]
+# openapi-client-generator = { path = "/Users/kurt/work/openapi-client-generator" }
