--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,49 @@
 [package]
 name = "plaid"
-version = "2.0.1"
 edition = "2021"
+version = "0.1.0"
 description = "Plaid client, generated from the OpenAPI spec."
+homepage = "https://github.com/libninjacom/plaid-rs"
+documentation = "https://docs.rs/plaid"
 readme = "README.md"
 license = "MIT"
-documentation = "https://docs.rs/plaid"
-homepage = "https://github.com/libninjacom/plaid-rs"
 repository = "https://github.com/libninjacom/plaid-rs"
 
 [dependencies]
 anyhow = "1.0.57"
 httpclient = "0.2.0"
-serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 
-[dev-dependencies]
-tokio = { version = "1.18.2", features = ["full"] }
+[dependencies.serde]
+version = "1.0.137"
+features = ["derive"]
+optional = false
+[dev-dependencies.tokio]
+version = "1.18.2"
+features = ["full"]
+optional = false
+
+[lib]
+path = "src/lib.rs"
+name = "plaid"
+plugin = false
+proc-macro = false
+edition = "2021"
+crate-type = ["rlib"]
+required-features = []
+
+[[example]]
+path = "examples/item_get.rs"
+name = "item_get"
+plugin = false
+proc-macro = false
+edition = "2021"
+required-features = []
+
+[[example]]
+path = "examples/transactions_get.rs"
+name = "transactions_get"
+plugin = false
+proc-macro = false
+edition = "2021"
+required-features = []
