--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -9,5 +9,5 @@ openapi-client-generator = { git = "https://github.com/libninjacom/openapi-clien
 serde_yaml = "0.8.23"
 
 # Use this for local development. Example:
-[patch."https://github.com/libninjacom/openapi-client-generator"]
-openapi-client-generator = { path = "/Users/kurt/work/openapi-client-generator" }
+#[patch."https://github.com/libninjacom/openapi-client-generator"]
+#openapi-client-generator = { path = "/Users/kurt/work/openapi-client-generator" }
